ver 2.3.6(6) fixed trello issues

--- a/Modacity/Modacity/ViewController/Improve/improve.storyboard
+++ b/Modacity/Modacity/ViewController/Improve/improve.storyboard
@@ -1131,7 +1131,7 @@ til the very end of the…</string>
         <!--Improvement Walkthrough View Controller-->
         <scene sceneID="WB7-OE-FOs">
             <objects>
-                <viewController id="lbF-mM-VHI" customClass="ImprovementWalkthroughViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ImprovementWalkthroughViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lbF-mM-VHI" customClass="ImprovementWalkthroughViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k1o-cA-2zc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
