--- a/Modacity/Modacity/ViewController/Settings/settings.storyboard
+++ b/Modacity/Modacity/ViewController/Settings/settings.storyboard
@@ -27,10 +27,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Modacity Navigation View Controller-->
         <scene sceneID="lgJ-s6-v3u">
             <objects>
-                <navigationController storyboardIdentifier="settingsscene" useStoryboardIdentifierAsRestorationIdentifier="YES" navigationBarHidden="YES" id="yLv-WZ-Nai" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="settingsscene" useStoryboardIdentifierAsRestorationIdentifier="YES" navigationBarHidden="YES" id="yLv-WZ-Nai" customClass="ModacityNavigationViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="41O-uF-IMm">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
