--- a/Modacity/Modacity/ViewController/SideMenuController/sidemenu.storyboard
+++ b/Modacity/Modacity/ViewController/SideMenuController/sidemenu.storyboard
@@ -73,6 +73,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BoR-fd-Qg3"/>
                     </view>
+                    <connections>
+                        <outlet property="tableViewMain" destination="hCB-VT-SQe" id="T6h-Iu-V8E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iv9-HU-hXj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
